optee_lib: build 03.03.00
Signed-off-by: Jorge Ramirez <jorge@foundries.io>

--- a/optee_lib/CMakeLists.txt
+++ b/optee_lib/CMakeLists.txt
@@ -115,6 +115,7 @@ FILE(
     ../sss/ex/inc
     ../hostlib/hostLib/inc
     ../hostlib/hostLib/libCommon/infra
+    ../hostlib/hostLib/libCommon/log
     ../hostlib/hostLib/libCommon/smCom
     ../hostlib/hostLib/libCommon/smCom/T1oI2C
     ../hostlib/hostLib/se05x_03_xx_xx
