Allow SSS_HAVE_SE05X_VER to be configurable via cmake
Use variable SE05X_Ver for defining the target SE05X version to be used,
as done in the nxp plug-and-trust.

Signed-off-by: Ricardo Salveti <ricardo@foundries.io>

--- a/optee_lib/CMakeLists.txt
+++ b/optee_lib/CMakeLists.txt
@@ -138,3 +138,11 @@ ADD_DEFINITIONS(-DT1oI2C)
 ADD_DEFINITIONS(-DT1oI2C_UM11225)
 ADD_DEFINITIONS(-DAX_EMBEDDED=1)
 ADD_DEFINITIONS(-DVERBOSE_APDU_LOGS=0)
+
+# SE05X Version
+SET(SE05X_Ver "03_XX" CACHE STRING "SE05X version definition")
+IF("${SE05X_Ver}" STREQUAL "03_XX")
+    ADD_DEFINITIONS(-DSSS_HAVE_SE05X_VER_03_XX=1)
+ELSEIF("${SE05X_Ver}" STREQUAL "06_00")
+    ADD_DEFINITIONS(-DSSS_HAVE_SE05X_VER_06_00=1)
+ENDIF()
